--- a/templates/index.html
+++ b/templates/index.html
@@ -76,7 +76,7 @@
     recommendationsList.innerHTML = '';
 
     const includeSameAuthor = document.getElementById(`includeSameAuthor${capitalize(tab)}`).checked;
-    const googleApiKey = 'YOUR_GOOGLE_API_KEY'; // Replace with your actual API key
+    const googleApiKey = 'AIzaSyDQTQy3LT7BOO_LLClbWuEvqiPbUbWWKBs'; // Replace with your actual API key
     const googleApiUrl = `https://www.googleapis.com/books/v1/volumes?q=${encodeURIComponent(bookTitle)}&maxResults=40&key=${googleApiKey}`;
 
     let books;
