--- a/templates/index.html
+++ b/templates/index.html
@@ -163,22 +163,20 @@
     } catch (error) {
       console.error(`Error fetching explanation for ${tab} tab:`, error);
     }
-  }
 
   function capitalize(word) {
     return word.charAt(0).toUpperCase() + word.slice(1);
   }
 
-  async function fetchExplanation(type, bookTitle, description_vector, tfidf_matrix, feature_names) {
+  async function fetchExplanation(type, bookTitle, bookDescription, allDescriptions) {
     const url = `/${type}-explanation`;
     const response = await fetch(url, {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
       body: JSON.stringify({
                              book_title: bookTitle,
-                             description_vector: description_vector,
-                             tfidf_matrix: tfidf_matrix,
-                             feature_names: feature_names
+                             book_description: bookDescription,
+                             all_books: allDescriptions
                            })
     });
     return response.json();
