--- a/templates/index.html
+++ b/templates/index.html
@@ -193,11 +193,11 @@
     try {
       let explanationData;
       if (tab === "lime") {
-        explanationData = await fetchExplanation('lime', bookTitle, description_vector, filteredTfidfMatrix, feature_names);
+        explanationData = await fetchExplanation('lime', description_vector, feature_names);
       } else if (tab === "shap") {
-        explanationData = await fetchExplanation('shap', bookTitle, description_vector, filteredTfidfMatrix, feature_names);
+        explanationData = await fetchExplanation('shap', description_vector, feature_names);
       } else if (tab === "counterfactual") {
-        explanationData = await fetchExplanation('counterfactual', bookTitle, description_vector, filteredTfidfMatrix, feature_names);
+        explanationData = await fetchExplanation('counterfactual', description_vector, feature_names);
       }
 
       // Display explanation for the active tab
@@ -211,16 +211,16 @@
       return word.charAt(0).toUpperCase() + word.slice(1);
     }
 
-    async function fetchExplanation(type, bookTitle, bookDescription, allDescriptions) {
+    async function fetchExplanation(type, description_vector, featureNames) {
       const url = `/${type}-explanation`;
       const response = await fetch(url, {
         method: 'POST',
         headers: {'Content-Type': 'application/json'},
         body: JSON.stringify({
-                               book_title: bookTitle,
+                               //book_title: bookTitle,
                                description_vector: description_vector,
-                               all_books: allDescriptions,
-                               filtered_tfidf_matrix: filteredTfidfMatrix,
+                               //all_books: allDescriptions,
+                               //filtered_tfidf_matrix: filteredTfidfMatrix,
                                feature_names: featureNames
                              })
       });
@@ -284,7 +284,7 @@
       const magnitudeB = Math.sqrt(vecB.reduce((sum, b) => sum + b * b, 0));
       return dotProduct / (magnitudeA * magnitudeB);
     }
-  }
+  
 </script>
 </body>
 </html>
